<resources>
    <string name="app_name">SKCT APP</string>
    <string name="copy">© Kishan - Powered by globeking.in -</string>
    <string name="hari">Haribalaji</string>
    <string name="ram">Arvind Raam</string>
    <string name="kisdet">"Ph no\t: 8903427534\ne - mail\t: kishan020696@gmail.com"</string>
    <string name="hardet">"Ph no\t: 8681094882\ne - mail\t: haribalajiravi@gmail.com"</string>
    <string name="ramdet">"Ph no\t: 9514955915\ne - mail\t: arvindraam.c.s@gmail.com"</string>
    <string name="img1">Main Page Image</string>
    <string name="lh1">Central Library</string>
    <string name="lt1">"The Central Library with excellent state of art infrastructure having unique resource collection which is international in scope. The SKCT Central Library is on its way to becoming an outstanding learning resource centre catering to the ever growing and uncompromising information and intellectual requirements of the students, faculty, and researchers.

The SKCT Central Library strives for a high quality of library service, which emphasizes the actual delivery of information rather than the actual delivery of documents to meet the generic as well as specific needs of users. It has computerized all its housekeeping activities using Library software INSPROPLUS that is being maintained and updated regularly, which is connected to campus wide network. This enables users in searching and availing the library resources. It uses the state-of-the-art technology in its functioning and services."</string>
    <string name="lh2">Vision</string>
    <string name="lt2">"SKCT Central Library inspires intellectual curiosity, learning and serves as a catalyst for the growth of knowledge by building, maintaining and disseminating the information and knowledge resources in the field of engineering and related areas."</string>
    <string name="lh3">Mission</string>
    <string name="lt3">"To provide the right information to the right user at the right time in the right format through comprehensive high quality information resources and services in support of research, teaching and learning needs of the SKCT community."</string>
    <string name="lh4">LIBRARIAN MESSAGE</string>
    <string name="lt4">"Welcome to the online doorway of SKCT-Central Library. The Library has Periodical Section and Digital Library are air conditioned with excellent state-of-the art infrastructure having unique resource collection, which is international in scope that brings together, in one location, current and historical information on Engineering, Technology and management studies. Library is fully computerized with software and server that houses all electronic databases. The web based INSPROPLUS Library Software which is connected to the campus-wide network enables users to search for Library resources and also manage circulation related details.

Further, the subscription of rich variety of electronic database such as NPTEL,, IEEE, ASCE,SPRINGER ,PROQUEST,online journals facilitate ease in finding data and ensures easy accessibility to the latest information on Engineering, Technology and Management research. The Library endeavours to provide services which most effectively and efficiently meet the needs of the SKCT community, academia, and industry."</string>
    <string name="sk">SRI KRISHNA</string>
    <string name="ct">College of Technology</string>
    <string name="cda">kishanimage</string>
    <string name="welcome">Welcome User!</string>
    <string name="uname">Welcome user!</string>
    <string name="placemen">"Mr. A. Saravanan plays a key role in the placements of SKCT. He has been both a guiding and an inspiring factor for our students. He has been working very strategically for the overall placements and has achieved it to a greater extent."</string>
    <string name="abt">The Developers</string>
    <string name="exp">"\tWe the team of students from Computer Science Engineering Department (2014 – 2018 CSE A Batch) of Sri Krishna College of Technology took this as an initiative to develop an app for our college. The app comprises all the features and the information provided by our website - www.skct.edu.in. It provides the users a handy environment to access their portal anytime in their mobile phones. Students can use this app for academic purposes.\n\nThe team of people who developed www.globeking.in initiated the app"</string>
    <string name="kishan">Balkishan</string>
    <string name="monhead">Monthly Report</string>
    <string name="aug15">August 2015</string>
    <string name="jul15">July 2015</string>
    <string name="jan16">January 2016</string>
    <string name="info">Be online to view the report</string>
    <string name="form">Online Forms</string>
    <string name="leave">Leave / OD Form</string>
    <string name="out">Outpass</string>
    <string name="depthead">List of Departments</string>
    <string name="plachead">SKCT - Placements</string>
    <string name="fachead">Facilities</string>
    <string name="nm">Name</string>
    <string name="cug1">Administration</string>
    <string name="cug2">Office Administration</string>
    <string name="cug3">Civil Engineering</string>
    <string name="cug4">Mechanical Engineering</string>
    <string name="cug5">Electronics and Communication Engineering</string>
    <string name="cug6">Electrical and Electronics Engineering</string>
    <string name="cug7">Instrumentation and Control Engineering</string>
    <string name="cug8">Computer Science and Engineering</string>
    <string name="cug9">Information Technology</string>
    <string name="cug10">Science and Humanities</string>
    <string name="cug11">Master of Business Administration</string>
    <string name="cug12">Master of Computer Applications</string>
    <string name="cug13">Physical Education</string>
    <string name="cug14">Placement and Training Cell</string>
    <string name="cug15">Systems Administrator</string>
    <string name="cug16">Library</string>
    <string name="cug17">Suporting Staff</string>
    <string name="mb">MECH</string>
    <string name="cb">CIVIL</string>
    <string name="ecb">ECE</string>
    <string name="eeb">EEE</string>
    <string name="csb">CSE</string>
    <string name="ib">IT</string>
    <string name="icb">ICE</string>
    <string name="sb">S and H</string>
    <string name="placb">Placement Officer</string>
    <string name="recut">Recuiters</string>
    <string name="pab">Placements 2015</string>
    <string name="pbb">Placements 2016</string>
    <string name="infb">Library</string>
    <string name="sllb">Download Syllabus</string>
    <string name="eeh1">Department of Electrical and Electronics Engineering</string>
    <string name="eeh2">Vision</string>
    <string name="eeh3">Mission</string>
    <string name="eeh4">Programmes</string>
    <string name="eeh5">Program Educational Objectives</string>
    <string name="eeh6">Program Outcomes</string>
    <string name="eeh7">BE EEE - 2013 Regulations, Scheme and Syllabi</string>
    <string name="eeh8">ME PSE - 2013 Regulations, Scheme and Syllabi</string>
    <string name="eet1">"\t\tThe department with a highly dedicated team of faculty members under the guidance of Dr.K.S.Chandragupta Mauryan HOD, steers the students to reach excellence in technical knowledge in the field of Electrical and Electronics. The department provide in-depth theoretical and practical expertise of budding Engineers. The laboratories are equipped with practical training and industrial interaction. The laboratories in the department reinforce the concepts of practical analysis allow the students to gain significant experience with electrical instruments."</string>
    <string name="eet2">"\t\tTo provide high quality education in the challenging and changing fields of Electrical and Electronics Engineering, facilitating an atmosphere for research and innovation, forging faculty and students into competent professionals with integrity."</string>
    <string name="eet3">"To impart theoretical knowledge to the students complemented with strong practical skills augmenting passion for continuous learning, research and innovation.
To consistently update the curricula, infrastructure and academic resources to meet the global challenges through student centric learning methodologies.
To foster students with a holistic personality, thus producing skilful engineers, committed to environment, society, safety and national economy."</string>
    <string name="eet4">"BE EEE
M.E Power System Engineering"</string>
    <string name="eet5">"To educate students to have sound Electrical and Electronics Engineering fundamentals in the basic areas like Power Systems, Power Electronics, Electric Drives, Embedded Systems and Control Engineering.
To prepare and train the students capable to design and conduct experiments, analyze and interpret data and effectively use modern technology in problem solving and research using appropriate mathematical and computational methodologies.
To train the students to understand the necessities for professionalism, ethical responsibilities and to function in multidisciplinary teams having good communication and interpersonal skills and practice them.
To prepare undergraduate students to become lifelong learners, innovators and socially responsible citizens, which would enable them to pursue higher studies and also to acquire entrepreneurial skills"</string>
    <string name="eet6">"Graduates will have an ability to apply the knowledge of mathematics, science and engineering.
Graduates are able to design and conduct experiments, as well as to analyze and interpret data.
Graduates have an ability to design a system, component, or process to meet desired needs within realistic constraints such as economic, environmental, social, political, ethical, health and safety, manufacturability and sustainability.
Graduates are able to articulate teamwork principles, leadership principles and to work with a multi-disciplinary team.
Graduates are able to identify, formulate to solve the engineering problems.
Graduates understand the principles of ethical decision making and can interpret the BIS Code of Ethics also proper use of other works (e.g., plagiarism, copyrights, and patents).
Graduates are able to produce engineering reports using written, oral and in a position to communicate their thoughts and ideas clearly and effectively. Graduates have a background in environment, social science and humanities that provides them with a foundation for understanding the impact of engineering solutions in a global and societal context.
Graduates capable to engage in lifelong education.
Graduates can explain basic concepts and problem solving processes used in business, public policy and business administration and management.
Graduates have an ability to use the techniques, skills and modern engineering tools and software’s necessary for engineering practice.
Graduates have an ability to understand the concepts, apply the knowledge to design, model and analyze the electrical systems based on state of art technology to cater to the industrial needs."</string>
    <string name="admission">Admission</string>
    <string name="contact_us">Contact Us</string>
    <string name="credits">Credits</string>
    <string name="departments">Departments</string>
    <string name="developers">Developers</string>
    <string name="facilities">Facilities</string>
    <string name="forms">Forms</string>
    <string name="login_to_skct">Login to SKCT</string>
    <string name="management">Management</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="placements">Placements</string>
    <string name="skct_cug">SKCT - CUG</string>
    <string name="share">Share</string>
    <string name="students_zone">Students Zone</string>
    <string name="feedback">Feedback</string>
    <string name="update_app">Update App</string>
    <string name="gallery">Gallery</string>
</resources>