<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cug_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kisha.skct.CugHome">

    <Button
        android:text="@string/cug1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button22"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        />

    <Button
        android:text="@string/cug2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button22"
        android:layout_centerHorizontal="true"
        android:id="@+id/button23"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <Button
        android:text="@string/cug3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button23"
        android:layout_centerHorizontal="true"
        android:id="@+id/button24"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button24"
        android:layout_centerHorizontal="true"
        android:id="@+id/button25"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button25"
        android:layout_centerHorizontal="true"
        android:id="@+id/button26"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button26"
        android:layout_centerHorizontal="true"
        android:id="@+id/button27"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button27"
        android:layout_centerHorizontal="true"
        android:id="@+id/button28"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button28"
        android:layout_centerHorizontal="true"
        android:id="@+id/button29"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button29"
        android:layout_centerHorizontal="true"
        android:id="@+id/button30"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button30"
        android:layout_centerHorizontal="true"
        android:id="@+id/button31"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button31"
        android:layout_centerHorizontal="true"
        android:id="@+id/button32"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button32"
        android:layout_centerHorizontal="true"
        android:id="@+id/button33"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <Button
        android:text="@string/cug13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button33"
        android:layout_centerHorizontal="true"
        android:id="@+id/button34"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button34"
        android:layout_centerHorizontal="true"
        android:id="@+id/button35"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button35"
        android:layout_centerHorizontal="true"
        android:id="@+id/button36"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button36"
        android:layout_centerHorizontal="true"
        android:id="@+id/button37"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/cug17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button37"
        android:layout_centerHorizontal="true"
        android:id="@+id/button38"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
    </ScrollView>
