<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:id="@+id/activity_eee_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kisha.skct.EeeHome">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="30sp"
        android:text="@string/eeh1"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:id="@+id/textView52"/>

    <ImageView
        android:id="@+id/imageView35"
        android:src="@drawable/eea"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_below="@+id/textView52">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/eet1"
        android:layout_marginTop="15dp"
        android:id="@+id/textView53"
        android:layout_below="@+id/imageView35"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:text="@string/eeh2"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:id="@+id/textView54"
        android:layout_below="@+id/textView53"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/eet2"
        android:layout_marginTop="15dp"
        android:id="@+id/textView55"
        android:layout_below="@+id/textView54"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:text="@string/eeh3"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:id="@+id/textView56"
        android:layout_below="@+id/textView55"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/eet3"
        android:layout_marginTop="15dp"
        android:id="@+id/textView57"
        android:layout_below="@+id/textView56"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:text="@string/eeh4"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:id="@+id/textView58"
        android:layout_below="@+id/textView57"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/eet4"
        android:layout_marginTop="15dp"
        android:id="@+id/textView59"
        android:layout_below="@+id/textView58"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:text="@string/eeh5"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:id="@+id/textView60"
        android:layout_below="@+id/textView59"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/eet5"
        android:layout_marginTop="15dp"
        android:id="@+id/textView61"
        android:layout_below="@+id/textView60"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:text="@string/eeh6"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:id="@+id/textView62"
        android:layout_below="@+id/textView61"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/eet6"
        android:layout_marginTop="15dp"
        android:id="@+id/textView63"
        android:layout_below="@+id/textView62"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:text="@string/eeh7"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:id="@+id/textView64"
        android:layout_below="@+id/textView63"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sllb"
        android:id="@+id/button41"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView64"
        android:layout_alignParentLeft="true"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:text="@string/eeh8"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:id="@+id/textView65"
        android:layout_below="@+id/button41"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sllb"
        android:id="@+id/button42"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView65"
        android:layout_alignParentLeft="true"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/quantum_ic_skip_previous_white_36"
        android:layout_below="@+id/textView52"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/imageView36" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/quantum_ic_skip_next_white_36"
        android:layout_below="@+id/textView52"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginRight="16dp"
        android:id="@+id/imageView37" />

</RelativeLayout>
</ScrollView>