<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kisha.skct.DepartmentHome">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/depthead"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:paddingTop="16dp"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mb"
        android:id="@+id/button"
        android:width="100dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb"
        android:id="@+id/button2"
        android:width="100dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ecb"
        android:id="@+id/button3"
        android:width="100dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryLight"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eeb"
        android:id="@+id/button4"
        android:width="100dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csb"
        android:id="@+id/button5"
        android:width="100dp"
        android:layout_below="@+id/button4"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ib"
        android:id="@+id/button6"
        android:width="100dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icb"
        android:layout_marginTop="10dp"
        android:id="@+id/button7"
        android:layout_below="@+id/button6"
        android:width="100dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:text="@string/sb"
        android:id="@+id/button8"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"/>

</RelativeLayout>
</ScrollView>